--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "connected-react-router": "^6.5.2",
+    "firebase": "^7.2.3",
     "history": "^4.9.0",
     "immutable": "^4.0.0-rc.12",
     "node-sass": "^4.12.0",
