--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-select": "^3.1.0",
     "react-toggle": "^4.1.1",
     "redux": "^4.0.1",
     "redux-form": "^8.2.4",
